--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-table": "7.8.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
+    "web3": "^4.7.0",
     "yup": "1.1.1"
   },
   "scripts": {
